--- a/styles.css
+++ b/styles.css
@@ -15,16 +15,32 @@
 } */
 
 body {
-	background-color: #5585b5;
+	background-color: #bbe4e9;
+	font-family: "Gabarito", sans-serif;
 }
 
 main {
-	background-color: #bbe4e9;
+	background-color: #fff;
+	border-radius: 10px;
+	box-shadow: 5px 5px 5px #79c2d0;
 	max-width: 600px;
 	margin: 50px auto;
+	opacity: 85%;
 	padding: 20px 20px;
 }
 
+form {
+	background-color: #79c2d0;
+	margin: auto -20px;
+	opacity: 50%;
+	padding: 20px 20px;
+	text-align: center;
+}
+
+#weather-today {
+	display: grid;
+	grid-template-columns: 2fr 1fr;
+}
 .visually-hidden {
 	clip: rect(0 0 0 0);
 	clip-path: inset(50%);
